# dual_arm_project

./: LICENSE  README.md  aubo_joint.m  public_data.xlsx
Underlying_Data/mobile_robot_model/: 70_1_1_1.sldprt  90╱45╱135度型╱90度加长型型材脚架[AEL40].step  Head_base.SLDPRT  ID-14.sldprt  ID-board.SLDPRT  LE-8-4040W铝型材-120.SLDPRT  LE-8-4040W铝型材-280-45.SLDPRT  LE-8-4040W铝型材-280.SLDPRT  LE-8-4040W铝型材-320.SLDPRT  LE-8-4040W铝型材-450-4.SLDPRT  LE-8-4040W铝型材-560.SLDPRT  UNO-2484G.SLDPRT  i5-V2.SLDASM  under_board.SLDPRT  侧钣金.SLDPRT  型材加工20210422.SLDASM  工业手抓.SLDASM
Underlying_Data/mobile_robot_model/GB/: SCB5-10.SLDPRT  SCB6-10.SLDPRT  motor.SLDPRT
double_robot_project/: joint_state.txt
double_robot_project/devel/: .catkin  .rosinstall  setup.sh
double_robot_project/src/: rectangle[dR].txt
dual_arm_platform_project/dual_arm_platform_project-master/double_robot_project/src/scout_robot/tracer_controller/: CMakeLists.txt
dual_arm_platform_project/dual_arm_platform_project-master/double_robot_project/src/scout_robot/tracer_controller/src/: controller.cpp
mobile_robot_model/: 100_1_1_1.sldprt  90╱45╱135度型╱90度加长型型材脚架[AEL40].step.SLDPRT  ID-25.sldprt  ID-5-00.sldprt  LE-8-4040W铝型材-370-2.SLDPRT  LE-8-4040W铝型材-370.SLDPRT  LE-8-4040W铝型材-50.SLDPRT  i7ID7.sldprt  mid_board.SLDPRT  up_board.SLDPRT  v16.SLDPRT  侧安装板.SLDDRW  合页.SLDASM  后钣金.SLDPRT  型材加工20210422.STEP  封板.SLDPRT  底板.SLDPRT
mobile_robot_model/GB/: M5-60.SLDPRT  SCB3-8.SLDPRT
mobile_robot_model/手抓/: 2-Finger_85_Adaptive_Gripper-opened.SLDPRT  Z-EFG-8NK-HW.SLDASM  Z-EFG-8NK-HW.SLDPRT
mobile_robot_model/手抓/3D图/: 3D图.stp
(+171 files in other folders)
